# cmake_survival

./: .gitignore  PHENICS_i2i_cmake_survival_2024.ppt  README.md
.github/workflows/: build_nix.yml
sh/: clean.sh  run.sh
tut/000/: CMakeLists.txt  README.md  main.cpp  run.sh
tut/001/: CMakeLists.txt  README.md  run.sh
tut/002/: CMakeLists.txt  README.md  run.sh
tut/002/src/: CMakeLists.txt
tut/003/: CMakeLists.txt  README.md  main.cpp  run.sh
tut/003/src/: CMakeLists.txt
tut/004/: CMakeLists.txt  README.md  run.sh
tut/004/src/: CMakeLists.txt  src.cpp
tut/005/: CMakeLists.txt  README.md  run.sh
tut/005/src/: CMakeLists.txt
tut/006/: README.md  main.cpp
tut/006/inc/: inc.hpp
tut/007/: CMakeLists.txt  README.md  run.sh
tut/007/src/: CMakeLists.txt
tut/008/: CMakeLists.txt  README.md  main.cpp  run.sh
tut/009/: CMakeLists.txt  README.md  main.cpp  run.sh
tut_adv/000/: CMakeLists.txt  README.md  main.cpp  run.sh
tut_adv/001/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  run.sh
tut_adv/002/: .run.sh.err  .run.sh.out  CMakeLists.txt  README.md  diff_defines.py  main.cpp  run.sh
tut_adv/003/: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
tut_adv/003/lib1/: CMakeLists.txt
tut_adv/003/lib1/inc/: lib1.hpp
tut_adv/003/lib1/src/: src.cpp
tut_adv/003/lib2/: CMakeLists.txt
tut_adv/003/lib2/inc/: lib2.hpp
tut_adv/003/lib2/src/: src.cpp
